fixed header spacing issues for small screens

--- a/style.css
+++ b/style.css
@@ -168,3 +168,20 @@ footer {
 footer p {
   padding: 20px;
 }
+
+@media (max-width: 768px) {
+  #header-text {
+    padding: 0 20px;
+    text-align: center;
+  }
+
+  .nav-items {
+    min-width: 200px;
+    padding-right: 10px;
+  }
+
+  .nav-item {
+    font-size: 12px;
+    text-decoration: none;
+  }
+}
